cloudbees/gke/cloudbees-core.yml
---
# Source: cloudbees-core/templates/cjoc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cjoc
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/name: "cloudbees-core"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cloudbees-core-3.7.0_ffcae9c08fc6"
    app.kubernetes.io/component: "cjoc"
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    app.kubernetes.io/component: "jenkins-master"
    com.cloudbees.cje.tenant: cjoc
  type: ClusterIP
---
# Source: cloudbees-core/templates/cjoc-statefulset.yaml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: cjoc
  labels:
    com.cloudbees.cje.type: cjoc
    com.cloudbees.cje.tenant: cjoc
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/name: "cloudbees-core"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cloudbees-core-3.7.0_ffcae9c08fc6"
    app.kubernetes.io/component: "cjoc"
spec:
  selector:
    matchLabels:
      com.cloudbees.cje.type: cjoc
      com.cloudbees.cje.tenant: cjoc
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  serviceName: cjoc
  template:
    metadata:
      name: cjoc
      labels:
        com.cloudbees.cje.type: cjoc
        com.cloudbees.cje.tenant: cjoc
        app.kubernetes.io/instance: "RELEASE-NAME"
        app.kubernetes.io/name: "cloudbees-core"
        app.kubernetes.io/managed-by: "Helm"
        helm.sh/chart: "cloudbees-core-3.7.0_ffcae9c08fc6"
        app.kubernetes.io/component: "jenkins-master"
    spec:
      affinity:
        nodeAffinity:
          # Schedule on linux nodes only.
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                  - linux
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              # Prefer nodes where there are no masters
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: com.cloudbees.cje.type
                      operator: In
                      values:
                        - master
            - weight: 1
              # Prefer nodes where there are no agents
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: jenkins
                      operator: In
                      values:
                        - slave
      serviceAccountName: cjoc
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 10
      containers:
      - name: jenkins
        image: "cloudbees/cloudbees-cloud-core-oc:2.190.3.2"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
        resources:
          limits:
            cpu: "1"
            memory: "2G"
          requests:
            cpu: "1"
            memory: "2G"

        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
          readOnly: false
        - name: jenkins-configure-jenkins-groovy
          mountPath: /var/jenkins_config/configure-jenkins.groovy.d
          readOnly: true
        livenessProbe:
            httpGet:
              path: /cjoc/login
              port: 8080
            initialDelaySeconds: 300
            timeoutSeconds: 5
            failureThreshold: 12
      volumes:
      - name: jenkins-configure-jenkins-groovy
        configMap:
          name: cjoc-configure-jenkins-groovy
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
      labels:
        app: cjoc
        release: "RELEASE-NAME"
        heritage: "Helm"
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "20Gi"
      storageClassName: "ssd"
---
# Source: cloudbees-core/templates/cjoc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cjoc
  labels:
    app.kubernetes.io/instance: "RELEASE-NAME"
    app.kubernetes.io/name: "cloudbees-core"
    app.kubernetes.io/managed-by: "Helm"
    helm.sh/chart: "cloudbees-core-3.7.0_ffcae9c08fc6"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
    nginx.ingress.kubernetes.io/app-root: https://$best_http_host/cjoc/teams-check/
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/app-root: "https://$best_http_host/cjoc/teams-check/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  rules:
  - host: "core.cb-gke.kearos.net"
    http:
      paths:
      - path: /cjoc
        backend:
          serviceName: cjoc
          servicePort: 80
  tls:
    - hosts:
        - core.cb-gke.kearos.net
      secretName: tls-core-cb-gke-kearos-net
